--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,10 +89,10 @@ workflows:
   version: 2
   dockerfile_wizard:
     jobs:
-      - build:
-          context: org-global
+      - build
+#          context: org-global
 
       - test_image:
-          context: org-global
+#          context: org-global
           requires:
             - build
