--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,7 +51,7 @@ jobs:
       - checkout
       - setup_remote_docker: 
          docker_layer_caching: true
-      - run: bash scripts/generate.sh > Dockerfile
+   #   - run: bash scripts/generate.sh > Dockerfile
 
       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
@@ -64,33 +64,33 @@ jobs:
       - store_artifacts:
           path: Dockerfile
 
-  test_image:
-    docker:
-      - image: $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG
-        environment:
-          <<: *image_config
+#  test_image:
+#    docker:
+#      - image: $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG
+ #       environment:
+ #         <<: *image_config
 
-    steps:
-      - checkout
+ #   steps:
+ #     - checkout
 
-      - run:
-          name: start Xvfb for phantomjs test
-          command: Xvfb :99
-          background: true
+ #     - run:
+ #         name: start Xvfb for phantomjs test
+ #         command: Xvfb :99
+ #         background: true
 
-      - run:
-          name: bats tests
-          command: |
-            mkdir -p test_results/bats
-            bats scripts/tests.bats | \
-            perl scripts/tap-to-junit.sh > \
-            test_results/bats/results.xml
+ #     - run:
+ #         name: bats tests
+ #         command: |
+ #           mkdir -p test_results/bats
+ #           bats scripts/tests.bats | \
+ #           perl scripts/tap-to-junit.sh > \
+ #           test_results/bats/results.xml
 
-      - store_test_results:
-          path: test_results
+ #     - store_test_results:
+ #         path: test_results
 
-      - store_artifacts:
-          path: test_results
+  #    - store_artifacts:
+  #        path: test_results
 
 workflows:
   version: 2
@@ -99,7 +99,7 @@ workflows:
       - build
 #          context: org-global
 
-      - test_image:
+#      - test_image:
 #          context: org-global
-          requires:
-            - build
+#          requires:
+#            - build
