--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,6 @@ image_config: &image_config
 version: 2
 jobs:
   build:
-  #  machine: true
     docker:
       - image: circleci/node:9.8.0-stretch-browsers 
     environment:
@@ -57,49 +56,16 @@ jobs:
 
       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
-
+      - run: docker image ls -a
       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
+      - run: docker image ls -a
 #      - run: docker push circleci/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
       - store_artifacts:
           path: Dockerfile
-
-#  test_image:
-#    docker:
-#      - image: $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG
- #       environment:
- #         <<: *image_config
-
- #   steps:
- #     - checkout
-
- #     - run:
- #         name: start Xvfb for phantomjs test
- #         command: Xvfb :99
- #         background: true
-
- #     - run:
- #         name: bats tests
- #         command: |
- #           mkdir -p test_results/bats
- #           bats scripts/tests.bats | \
- #           perl scripts/tap-to-junit.sh > \
- #           test_results/bats/results.xml
-
- #     - store_test_results:
- #         path: test_results
-
-  #    - store_artifacts:
-  #        path: test_results
 
 workflows:
   version: 2
   dockerfile_wizard:
     jobs:
       - build
-#          context: org-global
-
-#      - test_image:
-#          context: org-global
-#          requires:
-#            - build
