--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,4 @@
+# Adding comment to push fresh commit
 image_config: &image_config
 
   # make sure to set your Docker Hub username & password in CircleCI,
