Adding in orb and commenting out docker layer caching step and putting 2.1 info at the top

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,8 @@
+ version: 2.1
+ orbs:
+   docker-cache: cci-x/docker-registry-image-cache@0.2.0
+
+
 # Adding comment to push fresh commit
 image_config: &image_config
 
@@ -38,9 +43,9 @@ image_config: &image_config
  # Dockerize options: true, false
 
  # BROWSERS: # browser tools (Xvfb, PhantomJS, Firefox, Chrome, Chromedriver): true, false
- version: 2.1
- orbs:
-   docker-cache: cci-x/docker-registry-image-cache@0.2.0
+# version: 2.1
+# orbs:
+#   docker-cache: cci-x/docker-registry-image-cache@0.2.0
 
 #version: 2
 jobs:
