--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@
 
 
 # Adding comment to push fresh commit
-  image_config: &image_config
+#  image_config: &image_config
 
   # make sure to set your Docker Hub username & password in CircleCI,
   # either as project-specific environment variables
@@ -52,8 +52,8 @@ jobs:
   build:
     docker:
       - image: circleci/node:9.8.0-stretch-browsers 
-    environment:
-      <<: *image_config
+#    environment:
+#      <<: *image_config
 
     steps:
       - checkout
