--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,11 +10,11 @@
   # either as project-specific environment variables
   # or as resources in your organization's org-global Context
 
-  IMAGE_NAME: bohruby
+#  IMAGE_NAME: bohruby
 #  IMAGE_NAME: cci-demo-docker-primary 
   # name your image (no spaces please!)
 
-  IMAGE_TAG: ruby263
+#  IMAGE_TAG: ruby263
 #  IMAGE_TAG: 0.0.1 
   # give your image a tag (no spaces please!)
 
@@ -23,10 +23,10 @@
   # make sure you also add the values of your IMAGE_NAME & IMAGE_TAG variables
   # to the `test_image` job (line 55)
 
-  LINUX_VERSION: UBUNTU_XENIAL 
+#  LINUX_VERSION: UBUNTU_XENIAL 
   # DEBIAN_JESSIE, DEBIAN_STRETCH, UBUNTU_TRUSTY, or UBUNTU_XENIAL
 
-  RUBY_VERSION_NUM: 2.6.3 
+#  RUBY_VERSION_NUM: 2.6.3 
   # pick a version from https://cache.ruby-lang.org/pub/ruby
 
  # NODE_VERSION_NUM: # pick a version from https://nodejs.org/dist#
@@ -39,7 +39,7 @@
 
  # POSTGRES_CLIENT: # Postgres options: true, false
 
-  DOCKERIZE: true 
+#  DOCKERIZE: true 
  # Dockerize options: true, false
 
  # BROWSERS: # browser tools (Xvfb, PhantomJS, Firefox, Chrome, Chromedriver): true, false
