--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,26 +55,26 @@
 #    environment:
 #      <<: *image_config
 
-    steps:
-      - checkout
-      - setup_remote_docker: 
+     steps:
+       - checkout
+       - setup_remote_docker: 
  #        docker_layer_caching: true
    #   - run: bash scripts/generate.sh > Dockerfile
 
-      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-      - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
-      - run: docker image ls -a
-      - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
-      - run: docker image ls -a
+       - run: docker image ls -a
+       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
+       - run: docker image ls -a
 #      - run: docker push circleci/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
-      - store_artifacts:
-          path: Dockerfile
+       - store_artifacts:
+           path: Dockerfile
 
 workflows:
-  version: 2
+#  version: 2
   dockerfile_wizard:
     jobs:
       - build
