Commenting out all variables and creating as project environmental variables and indenting all parts and commenting out version 2.0 in workflow and commenting out workflows section

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -73,8 +73,8 @@
        - store_artifacts:
            path: Dockerfile
 
-workflows:
+#workflows:
 #  version: 2
-  dockerfile_wizard:
-    jobs:
-      - build
+#  dockerfile_wizard:
+#    jobs:
+#      - build
