--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@
 
      steps:
        - checkout
-       - setup_remote_docker: 
+       - setup_remote_docker 
  #        docker_layer_caching: true
    #   - run: bash scripts/generate.sh > Dockerfile
 
@@ -73,8 +73,8 @@
        - store_artifacts:
            path: Dockerfile
 
-#workflows:
-#  version: 2
-#  dockerfile_wizard:
-#    jobs:
-#      - build
+workflows:
+  version: 2
+  dockerfile_wizard:
+    jobs:
+      - build
