Putting back in DLC orb and seeing if it makes a difference with build times

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
  version: 2.1
-# orbs:
-#   docker-cache: cci-x/docker-registry-image-cache@0.2.0
+ orbs:
+   docker-cache: cci-x/docker-registry-image-cache@0.2.0
 
 
 # Adding comment to push fresh commit
