Amending code to put in step to using DLC as per orb

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,7 +63,13 @@
 
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 
-       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+#       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+       - docker-cache/with-save-restore-images:
+           repository: brianoh1979/bohruby
+           images: '$IMAGE_NAME:$IMAGE_TAG'
+           steps:
+             - docker-cache/build:
+                 command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
        - run: docker image ls -a
        - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
