--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,51 +3,6 @@
    docker-cache: cci-x/docker-registry-image-cache@0.2.0
 
 
-# Adding comment to push fresh commit
-#  image_config: &image_config
-
-  # make sure to set your Docker Hub username & password in CircleCI,
-  # either as project-specific environment variables
-  # or as resources in your organization's org-global Context
-
-#  IMAGE_NAME: bohruby
-#  IMAGE_NAME: cci-demo-docker-primary 
-  # name your image (no spaces please!)
-
-#  IMAGE_TAG: ruby263
-#  IMAGE_TAG: 0.0.1 
-  # give your image a tag (no spaces please!)
-
-  # NOTE: if you're modifying this config.yml file manually
-  # rather than using the included setup script,
-  # make sure you also add the values of your IMAGE_NAME & IMAGE_TAG variables
-  # to the `test_image` job (line 55)
-
-#  LINUX_VERSION: UBUNTU_XENIAL 
-  # DEBIAN_JESSIE, DEBIAN_STRETCH, UBUNTU_TRUSTY, or UBUNTU_XENIAL
-
-#  RUBY_VERSION_NUM: 2.6.3 
-  # pick a version from https://cache.ruby-lang.org/pub/ruby
-
- # NODE_VERSION_NUM: # pick a version from https://nodejs.org/dist#
-
- # PYTHON_VERSION_NUM: # pick a version from https://python.org/ftp/python
-
- # JAVA: # Java options: true, false
-
- # MYSQL_CLIENT: # MySQL options: true, false
-
- # POSTGRES_CLIENT: # Postgres options: true, false
-
-#  DOCKERIZE: true 
- # Dockerize options: true, false
-
- # BROWSERS: # browser tools (Xvfb, PhantomJS, Firefox, Chrome, Chromedriver): true, false
-# version: 2.1
-# orbs:
-#   docker-cache: cci-x/docker-registry-image-cache@0.2.0
-
-#version: 2
  jobs:
    build:
      docker:
@@ -69,7 +24,7 @@
                docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
 #       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
        - docker-cache/with-save-restore-images:
-           repository: index.docker.io/bohruby
+           repository: index.docker.io
            images: '$IMAGE_NAME:$IMAGE_TAG'
            steps:
              - docker-cache/build:
