--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,7 +23,7 @@
                docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
 #       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
        - docker-cache/with-save-restore-images:
-           repository: index.docker.io
+           repository: index.docker.io/brianoh1979
            images: '$IMAGE_NAME:$IMAGE_TAG'
            steps:
              - docker-cache/build:
