--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,6 @@
- version: 2.1
- orbs:
-   docker-cache: cci-x/docker-registry-image-cache@0.2.11
+ version: 2
+# orbs:
+#   docker-cache: cci-x/docker-registry-image-cache@0.2.11
 
 
  jobs:
@@ -14,22 +14,22 @@
 
      steps:
        - checkout
- #      - setup_remote_docker 
- #        docker_layer_caching: true
+       - setup_remote_docker: 
+         docker_layer_caching: true
 
-#       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-       - run:
-           name: docker login
-           command: |
-             echo "$DOCKER_PASSWORD" | \
-               docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
-#       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
-       - docker-cache/with-save-restore-images:
-           repository: docker.io/brianoh1979
-           images: '$IMAGE_NAME:$IMAGE_TAG'
-           steps:
-             - docker-cache/build:
-                 command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
+       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#       - run:
+#           name: docker login
+#           command: |
+#             echo "$DOCKER_PASSWORD" | \
+#               docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
+       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+#       - docker-cache/with-save-restore-images:
+#           repository: docker.io/brianoh1979
+#           images: '$IMAGE_NAME:$IMAGE_TAG'
+#           steps:
+#             - docker-cache/build:
+#                 command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
        - run: docker image ls -a
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
