--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@
  jobs:
    build:
      machine:
-      image: 'ubuntu-1604:201903-01'
+#      image: 'ubuntu-1604:201903-01'
+       docker_layer_caching: true
 #     docker:
 #       - image: circleci/node:9.8.0-stretch-browsers 
 #    environment:
@@ -14,8 +15,8 @@
 
      steps:
        - checkout
-       - setup_remote_docker: 
-           docker_layer_caching: true
+#       - setup_remote_docker: 
+#           docker_layer_caching: true
 
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
 #       - run:
