--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,13 +23,13 @@
 #           command: |
 #             echo "$DOCKER_PASSWORD" | \
 #               docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
-       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
-#       - docker-cache/with-save-restore-images:
+#       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
+       - docker-cache/with-save-restore-images:
 #           repository: docker.io/brianoh1979
-#           images: '$IMAGE_NAME:$IMAGE_TAG'
-#           steps:
-#             - docker-cache/build:
-#                 command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
+           images: '$IMAGE_NAME:$IMAGE_TAG'
+           steps:
+             - docker-cache/build:
+                 command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
        - run: docker image ls -a
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
