--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,12 +17,12 @@
  #      - setup_remote_docker 
  #        docker_layer_caching: true
 
-       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-#       - run:
-#           name: docker login
-#           command: |
-#             echo "$DOCKER_PASSWORD" | \
-#               docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
+#       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+       - run:
+           name: docker login
+           command: |
+             echo "$DOCKER_PASSWORD" | \
+               docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
 #       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
        - docker-cache/with-save-restore-images:
 #           repository: docker.io/brianoh1979
