--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@
                docker login --username "$DOCKER_USERNAME" --password-stdin https://index.docker.io/v1
 #       - run: docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .
        - docker-cache/with-save-restore-images:
-           repository: brianoh1979/dlc01
+           repository: dlc01
            images: '$IMAGE_NAME:$IMAGE_TAG'
            steps:
              - docker-cache/build:
