--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,8 +39,8 @@
                  command: 'docker build -t bohruby:$(< /tmp/cache-key) .'
 #      - run: docker build -t circleci/$IMAGE_NAME:$IMAGE_TAG .
        - run: docker image ls -a
-       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
-       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
+#       - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+#       - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 #      - run: docker push circleci/$IMAGE_NAME:$IMAGE_TAG && sleep 10
 
        - store_artifacts:
