Trying this with some syntax taken from example and using 'generate cache key' and commenting out last Docker Login and push commands and amending Dockerfile and commenting out latest tag

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@
            repository: brianoh1979
            images: >-
              bohruby:$(< /tmp/cache-key)
-             bohruby:latest
+#             bohruby:latest
            steps:
              - docker-cache/build:
                  command: 'docker build -t bohruby:$(< /tmp/cache-key) .'
