--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@
            publish-alpha-version: false
            publish-sha-version: true
            requires:
-             - build-and-validate
+#             - build-and-validate
              - test-orb-hub
        - orb-tools/dev-promote-prod:
            <<: *only-master
