--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@
      machine: {image: 'ubuntu-1604:201903-01'}
      steps:
        - checkout
+       - run: docker --version
        - run:
            name: docker login
            command: |
