Changing to older version of Machine Executor to use older Docker version and making amendment to Dokcerfile to push change and adding in Docker Version command - had only previously changed version of image on proper DLC job

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,8 @@
            docker build .
 
    test-orb-hub:
-     machine: {image: 'ubuntu-1604:201903-01'}
+     machine:
+       image: circleci/classic:201708-01
      steps:
        - checkout
        - run: docker --version
