--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@
        - run:
            name: docker login
            command: |
-             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
+             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 
        - docker-cache/with-save-restore-images:
            repository: brianoh1979
            images: >-
