--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@
        - run:
            name: docker login
            command: |
-             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 
+             echo "$DOCKER_PASSWORD" | docker login index.docker.io --username brianoh1979 --password $DOCKER_PASSWORD 
        - docker-cache/with-save-restore-images:
            repository: brianoh1979
            images: >-
