--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,25 +8,33 @@
 
  jobs:
    with-dlc:
-     machine:
-       image: circleci/classic:201708-01
-       docker_layer_caching: true
+ #    machine:
+ #      image: circleci/classic:201708-01
+      docker:
+        - image: circleci/node:9.8.0-stretch-browsers     
+ #      docker_layer_caching: true
      steps:
        - checkout
+       - setup_remote_docker:
+           docker_layer_caching: true
        - run: docker image ls -a
        - run: |
            docker build .
 
    test-orb-hub:
-     machine:
-       image: circleci/classic:201708-01
+      docker:
+        - image: circleci/node:9.8.0-stretch-browsers
+ #    machine:
+ #      image: circleci/classic:201708-01
      steps:
        - checkout
+       - setup_remote_docker:
+           docker_layer_caching: true
        - run: docker --version
        - run:
            name: docker login
            command: |
-             echo "$DOCKER_PASSWORD" | docker login index.docker.io --username brianoh1979 --password $DOCKER_PASSWORD 
+             echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin 
        - docker-cache/with-save-restore-images:
            repository: brianoh1979
            images: >-
