--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,18 @@
        - checkout
  #       - setup_remote_docker:
  #           docker_layer_caching: true
+       - run: sudo apt-get purge -y docker-engine docker docker.io docker-ce
+       - run: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce 
+       - run: sudo apt-get update
+       - run: sudo apt-get install \
+                apt-transport-https \
+                ca-certificates \
+                curl \
+                gnupg-agent \
+                software-properties-common
+ #      - run: sudo apt-key fingerprint 0EBFCD88
+       - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+       - run: sudo apt-get install docker-ce docker-ce-cli containerd.io 
        - run: docker --version
        - run:
            name: docker login
