--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@
        - checkout
  #       - setup_remote_docker:
  #           docker_layer_caching: true
-       - run: sudo apt-get purge -y docker-engine docker docker.io docker-ce
+ #      - run: sudo apt-get purge -y docker-engine docker docker.io docker-ce
  #      - run: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
        - run: sudo apt-get remove docker docker-engine docker.io containerd runc 
        - run: sudo apt-get update
