--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,8 @@
  #      - run: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
  #      - run: sudo apt-get remove docker docker-engine docker.io containerd runc 
        - run: sudo apt-get update
-       - run: sudo apt-get install apt-transport-https
+       - run: sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
+ #      - run: sudo apt-get install apt-transport-https
  #               apt-transport-https \
  #               ca-certificates \
  #               curl \
@@ -38,7 +39,11 @@
  #               software-properties-common
  #      - run: sudo apt-key fingerprint 0EBFCD88
        - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-       - run: sudo apt-get install docker-ce docker-ce-cli containerd.io 
+       - run: sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
+       - run: sudo apt update
+       - run: apt-cache search docker-ce
+       - run: sudo apt update
+       - run: sudo apt install docker-ce
        - run: docker --version
        - run:
            name: docker login
