--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,44 +8,31 @@
 
  jobs:
    with-dlc:
-     machine:
-       image: circleci/classic:201708-01
+     machine: {image: 'ubuntu-1604:201903-01'}
+  #     image: circleci/classic:201708-01
        docker_layer_caching: true
      steps:
        - checkout
- #       - setup_remote_docker:
- #           docker_layer_caching: true
        - run: docker image ls -a
        - run: |
            docker build .
 
    test-orb-hub:
-     machine:
-       image: circleci/classic:201708-01
+     machine: {image: 'ubuntu-1604:201903-01'}
+   #    image: circleci/classic:201708-01
      steps:
        - checkout
- #       - setup_remote_docker:
- #           docker_layer_caching: true
-       - run: sudo apt-get purge -y docker-engine docker docker.io docker-ce
- #      - run: sudo apt-get autoremove -y --purge docker-engine docker docker.io docker-ce
- #      - run: sudo apt-get remove docker docker-engine docker.io containerd runc 
-       - run: sudo apt-get update
-       - run: sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
- #      - run: sudo apt-get install apt-transport-https
- #               apt-transport-https \
- #               ca-certificates \
- #               curl \
- #               gnupg-agent \
- #               software-properties-common
- #      - run: sudo apt-key fingerprint 0EBFCD88
-       - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
-       - run: sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
-       - run: sudo apt update
-       - run: apt-cache search docker-ce
-       - run: sudo apt update
-       - run: apt-cache madison docker-ce
-       - run: sudo apt-get install docker-ce=5:19.03.8~3-0~ubuntu-xenial docker-ce-cli=5:19.03.8~3-0~ubuntu-xenial containerd.io
-       - run: sudo docker run hello-world
+ #      - run: sudo apt-get purge -y docker-engine docker docker.io docker-ce
+ #      - run: sudo apt-get update
+ #      - run: sudo apt-get install apt-transport-https ca-certificates curl software-properties-common
+ #      - run: curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+ #      - run: sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu xenial stable"
+ #      - run: sudo apt update
+ #      - run: apt-cache search docker-ce
+ #      - run: sudo apt update
+ #      - run: apt-cache madison docker-ce
+ #      - run: sudo apt-get install docker-ce=5:19.03.8~3-0~ubuntu-xenial docker-ce-cli=5:19.03.8~3-0~ubuntu-xenial containerd.io
+ #      - run: sudo docker run hello-world
        - run: docker --version
        - run:
            name: docker login
