--- a/Dockerfile_multistage
+++ b/Dockerfile_multistage
@@ -12,8 +12,10 @@ RUN \
   apt-get install sbt && \
   sbt sbtVersion
 
-FROM php:7.0-apache  
-COPY . /var/www/php  
+FROM php:7.2-apache  
+COPY img /var/www/php
+COPY Makefile /var/www/php
+COPY scripts /var/www/php  
 
 FROM launcher.gcr.io/google/ubuntu16_04
 
@@ -77,6 +79,6 @@ WORKDIR /root/
 #COPY --from=0 /go/src/github.com/alexellis/href-counter/app .
 CMD ["./app"]  
 
-FROM python:3.7.2-alpine3.8
+FROM python:3.7-alpine3.7
 COPY . /app
 ENTRYPOINT [“python”, “./app/my_script.py”, “my_var”]
