--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,42 +11,66 @@
 
  jobs:
    with-dlc:
-      docker:
-        - image: circleci/node:stretch     
+      machine:
+        image: ubuntu-1604:201903-01
+        docker_layer_caching: true
+      environment:
+        DOCKER_BUILDKIT: "1"
+ #     docker:
+ #       - image: circleci/node:stretch     
       steps:
         - checkout
-        - setup_remote_docker:
-            docker_layer_caching: true
-        - run: docker image ls -a
-        - run: |
-            docker build .
-
-   test-orb-hub:
-      docker:
-        - image: circleci/node:stretch
-      steps:
-        - checkout
-        - setup_remote_docker:
-            docker_layer_caching: true
-        - run: docker --version
+ #       - setup_remote_docker:
+ #           docker_layer_caching: true
+ #       - run: docker image ls -a
+ #       - run: |
+ #           docker build .
         - run:
-            name: docker login
+            name: build app in a Docker
+            no_output_timeout: 1h
             command: |
-              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin 
-        - docker-cache/with-save-restore-images:
-            repository: brianoh1979
-            parallelism: 3
-            images: >-
-              cache-orb:master cache-orb:base1-master 
-              cache-orb:${CIRCLE_BRANCH/\//-}
-              cache-orb:base1-${CIRCLE_BRANCH/\//-}
-            steps:
-              - docker-cache/build:
-                  command: >-
-                    docker build -t cache-orb:base1-${CIRCLE_BRANCH/\//-} --target
-                    base1 .
-              - docker-cache/build:
-                  command: 'docker build -t cache-orb:${CIRCLE_BRANCH/\//-} .'
+              TAG=${cache-orb:${CIRCLE_BRANCH/\//-}}
+              #docker login ${DOCKER_REGISTRY_HOSTNAME} -u ${DOCKER_REGISTRY_USER} -p ${DOCKER_REGISTRY_PASSWORD}
+              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
+              mkdir -p workspace/images
+              DOCKER_IMAGE_NAME="front-dist"
+              if [ "<< parameters.angular_config >>" == "fast" ] ; then
+                DOCKER_IMAGE_NAME="front-fast"
+              fi
+              if ! docker image pull hub.docker.com/brianoh1979/bohruby:$TAG ; then
+                docker build .
+                docker image save front-fast > workspace/images/front-fast.gz
+              fi
+        - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
+            root: workspace
+            paths:
+              - images
+#   test-orb-hub:
+#      docker:
+#        - image: circleci/node:stretch
+#      steps:
+#        - checkout
+#        - setup_remote_docker:
+#            docker_layer_caching: true
+#        - run: docker --version
+#        - run:
+#            name: docker login
+#            command: |
+#              echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin 
+#        - docker-cache/with-save-restore-images:
+#            repository: brianoh1979
+#            parallelism: 3
+#            images: >-
+#              cache-orb:master cache-orb:base1-master 
+#              cache-orb:${CIRCLE_BRANCH/\//-}
+#              cache-orb:base1-${CIRCLE_BRANCH/\//-}
+#            steps:
+#              - docker-cache/build:
+#                  command: >-
+#                    docker build -t cache-orb:base1-${CIRCLE_BRANCH/\//-} --target
+#                    base1 .
+#              - docker-cache/build:
+#                  command: 'docker build -t cache-orb:${CIRCLE_BRANCH/\//-} .'
  #             - docker-cache/tag:
  #                 tags: |-
  #                   cache-orb:${CIRCLE_BRANCH/\//-} cache-orb:retagged-a
