--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,7 @@
               echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
               mkdir -p workspace/images
               if ! docker image pull hub.docker.com/brianoh1979/bohruby:$TAG ; then
-                docker build .
+                docker build -t front-fast .
                 docker image save front-fast > workspace/images/front-fast.gz
               fi
         - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
