--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,7 @@
               echo "$DOCKER_PASSWORD" | docker login --username brianoh1979 --password-stdin
               mkdir -p workspace/images
               if ! docker image pull brianoh1979/bohruby:$TAG ; then
-                docker-compose -f docker-compose.multi.yml build
-                docker-compose build --build-arg BUILDKIT_INLINE_CACHE=1
+                docker-compose -f docker-compose.multi.yml build --build-arg BUILDKIT_INLINE_CACHE=1
               fi      
         - persist_to_workspace: # persist the saved Docker image in the workspace to share it with next job
             root: workspace
