--- a/docker-compose.multi.yml
+++ b/docker-compose.multi.yml
@@ -1,7 +1,8 @@
 version: '3'
 services:
   web:
-    build: .
+    build:
+      context: .
       cache_from:
         - docker.io/brianoh1979
     ports:
