Amending Docker COnmpose file to use cache from within build statement and amending the format of Compose file build statement and changing Docker Compose version to 3.2 as well as cache from statement to add image tag

--- a/docker-compose.multi.yml
+++ b/docker-compose.multi.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       cache_from:
-        - docker.io/brianoh1979
+        - docker.io/brianoh1979:bohruby
     ports:
       - "5000:5000"
   redis:
