--- a/docker-compose.multi.yml
+++ b/docker-compose.multi.yml
@@ -4,7 +4,7 @@ services:
     build:
       context: .
       cache_from:
-        - docker.io/brianoh1979:bohruby
+        - docker.io/brianoh1979/bohruby:latest
     ports:
       - "5000:5000"
   redis:
