Using Dockerfile supplied by customer and going back to Docker build instead of Docker Compose and going back to YAML file that didn't use DLC orb and making amendments so they should both compile and commenting out npm postinstall commands as well as conditions before 12 minute script and hardcoding tag in Compose file

--- a/compose-init-data.yml
+++ b/compose-init-data.yml
@@ -15,7 +15,7 @@ services:
       - cypress-init-data
 
   backend-service:
-    image: docker.io/brianoh1979/bohruby:$TAG
+    image: docker.io/brianoh1979/bohruby:ruby263
     links:
       - "elasticsearch:elasticsearch"
     restart: "no"
