--- a/compose-init-data.yml
+++ b/compose-init-data.yml
@@ -15,7 +15,7 @@ services:
       - cypress-init-data
 
   backend-service:
-    image: docker.io/brianoh1979/bohruby:ruby263
+    image: bitnami/postgresql
     links:
       - "elasticsearch:elasticsearch"
     restart: "no"
