--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@
            steps:
              - docker-cache/build:
    #              command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
-                 command: 'docker-compose -f compose-init-data.yml build'
+                 command: 'docker-compose -f cypress-ci/compose-init-data.yml up --quiet-pull --abort-on-container-exit'
        - run: docker image ls -a
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
        - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
