Using Docker COmpose with customer file and orb and adding parallellism of 25 and changing command in config.yml to match that of customer and taking out subdirectory reference for file but not using orb this time

--- a/.circleci/config_orb_compose.yml
+++ b/.circleci/config_orb_compose.yml
@@ -5,6 +5,7 @@
 
  jobs:
    build:
+     parallelism: 25
      machine:
       image: 'ubuntu-1604:201903-01'
 
@@ -21,7 +22,7 @@
            steps:
              - docker-cache/build:
    #              command: 'docker build -t $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG .'
-                 command: 'docker-compose -f compose-init-data.yml build'
+                 command: 'docker-compose -f compose-init-data.yml up --quiet-pull --abort-on-container-exit'
        - run: docker image ls -a
        - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
        - run: docker push $DOCKER_USERNAME/$IMAGE_NAME:$IMAGE_TAG && sleep 10
