--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,8 @@
  #       - setup_remote_docker:
  #           docker_layer_caching: true
         - run: docker image ls -a
-        - run: |
-            docker build .
+#        - run: |
+#            docker build .
         - run:
             name: build app in a Docker
             no_output_timeout: 1h
