Going back to Docker build step without orb on new branch to see what caches and what not and commenting out layer section line from run seperated script part to see does this trigger and amending Dockerfile to make it as accurate as possible

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
+    "postinstall": "postinstall myconfig.json",
     "start": "ng serve --prod --source-map",
     "build": "ng build --prod --source-map",
     "test": "npm run build && cypress-runner run",
