--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,8 @@
         default: "production"
     steps:
       - checkout
+      - run: echo $Test1
+      - run: echo $Test3
       - run:
           name: build app in a Docker
           no_output_timeout: 1h
